# sev-snp-utils

./: Cargo.toml  Makefile  README.md  vmsa_builtin.rs
resources/test/identity/: auth_info.b64  author-key.pem  id-key.pem  id_block.b64
resources/test/measure/: OVMF_CODE.fd  vmlinuz.cmdline
src/: error.rs  lib.rs
src/common/: binary.rs  cache.rs  cert.rs  env.rs  fetch.rs  file.rs  guid.rs  hash.rs  mod.rs  pem.rs
src/guest/: mod.rs
src/guest/attestation/: certs.rs  get_report.rs  get_report_types.rs  mod.rs  report.rs  snp.rs  vcek.rs  verify.rs
src/guest/derived_key/: derived_key.rs  get_derived_key.rs  mod.rs
src/guest/identity/: ecdsa.rs  fingerprint.rs  mod.rs  types.rs
src/guest/ioctl/: guest_request_types.rs  mod.rs
src/guest/measure/: gctx.rs  mod.rs  ovmf.rs  sev_hashes.rs  types.rs  vcpu_types.rs  vmsa.rs  vmsa_builtin.rs  vmsa_sev.rs
