[package]
name = "sev-snp-utils"
description = "AMD SEV-SNP utils"
authors = ["David Radunz <david.radunz@litprotocol.com>"]
version = "0.1.0"
edition = "2021"
exclude = ["resources/test/"]

[dependencies]
byteorder = { version = "1.4.3" }
reqwest = { version = "0.11.12" }
tokio = { version = "1.21.2", features = ["full"] }
bytes = { version = "1.2.1" }
log = { version = "0.4.17" }
async-std = { version = "1.12.0" }
async-trait = { version = "0.1.57" }
pkix = { version = "0.1.2" }