[package]
name = "sev-snp-utilities"
description = "AMD SEV-SNP utils"
authors = [
    "Nicholas Young <nicholas@litprotocol.com>",
    "Howard Tam <howard@litprotocol.com>",
]
license = "Apache-2.0"
homepage = "https://litprotocol.com/"
repository = "https://github.com/LIT-Protocol/sev-snp-utils"
readme = "README.md"
keywords = ["attestation", "AMD", "SEV-SNP"]
categories = ["api-bindings", "hardware-support"]
version = "1.5.1"
edition = "2021"
exclude = ["resources/test/"]

[features]
default = []
trust-dns = ["reqwest/trust-dns"]

[dependencies]
libc = { version = "0.2.134" }
async-std = { version = "1.12.0" }
async-trait = { version = "0.1.57" }
byteorder = { version = "1.4.3" }
bytemuck = { version = "1.12.3" }
nix = { version = "0.26.1" }
sha2 = { version = "0.10.6" }
cached = { version = "0.41.0" }
reqwest = { version = "0.11.12" }
tokio = { version = "1.28.0", features = ["full"] }
bytes = { version = "1.2.1" }
log = { version = "0.4.17" }
pem = { version = "1.1.0" }
openssl = { version = "0.10.42" }
base64 = { version = "0.20.0-alpha.1" }
hex = { version = "0.4.3" }
once_cell = { version = "1.17.0" }
tracing = "0.1.40"

# temporarily include the upstream crate as a facade -nicholas
sev = { version = "5.0.0", features = ["openssl", "snp"] }

[dependencies.uuid]
version = "1.2.2"
features = ["v4", "fast-rng", "macro-diagnostics"]
